# quickshell

./: shell.qml
components/: Bar.qml  BluetoothPanel.qml  Clock.qml  ControlCenter.qml  SystemTray.qml  TooltipArea.qml  TooltipPopup.qml  WifiPanel.qml  WindowTitle.qml  Workspaces.qml  qmldir
core/: .gitignore  Cargo.toml
core/src/: main.rs
modules/: Bar.qml
services/: BluetoothService.qml  ColorScheme.qml  DropdownService.qml  NetworkService.qml  SystemService.qml  TooltipService.qml  qmldir
