[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
networkmanager = "0.4"
dbus = "0.9"
bluer = { version = "0.17", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
